--- a/.htaccess
+++ b/.htaccess
@@ -3,7 +3,7 @@
     RewriteEngine On
 
     RewriteCond %{REQUEST_FILENAME} !-f
-    RewriteRule ^(.*)$ /Projecte_Bloc_1/index.php [QSA,L]
+    RewriteRule ^(.*)$ index.php [QSA,L]
 
 </IfModule>
 
