--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,9 @@
 {
     "require": {
         "twig/twig": "^2.0.0",
-        "twig/extensions": "^1.5"
+        "twig/extensions": "^1.5",
+        "tecnickcom/tcpdf": "^6.3.2",
+        "dompdf/dompdf": "^0.8.3"
     },
     "autoload" : {
         "psr-4": {
